@startuml

title __PLAYER's Class Diagram__\n

  namespace ro.uaic.info.game.objects.player {
    class ro.uaic.info.game.objects.player.Player {
        + copy()
        + getInputListener()
        + getMesh()
        + getShip()
        + getSprite()
        + getTransform()
        + hasCollision()
        + hasMesh()
        + hasSprite()
        + setTransform()
        + update()
        - movePlayer()
    }
  }
  

  namespace ro.uaic.info.game.objects.player {
    class ro.uaic.info.game.objects.player.Player.PlayerBuilder {
        + build()
        + withShip()
    }
  }
  

  namespace ro.uaic.info.game.objects.player {
    class ro.uaic.info.game.objects.player.PlayerInputListener {
        - down : boolean
        - left : boolean
        - right : boolean
        - up : boolean
        + keyPressed()
        + keyReleased()
        + keyTyped()
        + pressedDown()
        + pressedLeft()
        + pressedRight()
        + pressedUp()
        + toString()
    }
  }
  

  ro.uaic.info.game.objects.player.Player .up.|> ro.uaic.info.engine.object.GameObject
  ro.uaic.info.game.objects.player.Player o-- ro.uaic.info.game.objects.player.PlayerInputListener : listener
  ro.uaic.info.game.objects.player.Player o-- ro.uaic.info.game.objects.ship.Ship : ship
  ro.uaic.info.game.objects.player.Player o-- ro.uaic.info.engine.object.transform.Transform : transform
  ro.uaic.info.game.objects.player.Player +-down- ro.uaic.info.game.objects.player.Player.PlayerBuilder
  ro.uaic.info.game.objects.player.Player.PlayerBuilder o-- ro.uaic.info.game.objects.ship.Ship : ship
  ro.uaic.info.game.objects.player.PlayerInputListener .up.|> java.awt.event.KeyListener



@enduml
